<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ResultActivity"
    android:id="@+id/resultDisplay">

    <!--도감 보기 탭을 펼치기 전에 보일 화면-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            android:elevation="2dp">

            <TextView
                android:id="@+id/hashtagName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:textColor="#000000"/>

        </androidx.appcompat.widget.Toolbar>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:text="@string/myBook_ResultActivity"
                    android:textSize="16dp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_add_black_24dp"
                    android:id="@+id/savedPostPlus"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler1_result"
                        android:scrollbars="none"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/empty_view"
                        android:layout_width="match_parent"
                        android:layout_height="110dp"
                        android:gravity="center"
                        android:visibility="gone"
                        android:text="@string/result_guide"
                        android:textColor="@color/colorPrimary"/>

                </FrameLayout>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/darkGray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/new_ResultActivity"
                    android:textSize="16dp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

            </LinearLayout>

            <com.wang.avi.AVLoadingIndicatorView
                android:id="@+id/activity_result_pb_circle"
                style="@style/AVLoadingIndicatorView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="100dp"
                android:indeterminate="true"
                android:progress="1"
                app:indicatorName="BallSpinFadeLoaderIndicator"
                app:indicatorColor="@color/colorPrimary"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler2_result"
                android:scrollbars="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>


    </LinearLayout>

    <!--도감 보기 탭을 펼쳤을 때 사용자의 도감을 리스트로 보여줄 화면-->
    <LinearLayout
        android:id="@+id/bookList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="40dp"
        android:gravity="center_horizontal"
        android:background="@color/colorWhite"
        android:layout_gravity="end"
        android:orientation="vertical">

        <TextView
            android:id="@+id/result_drawer_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:minHeight="?attr/actionBarSize"
            android:drawableLeft="@drawable/drawer_menu"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:textSize="18dp"
            android:textStyle="bold"
            android:text="ㅇㅇ 도감"/>

        <TextView
            android:id="@+id/result_drawer_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingBottom="10dp"
            android:gravity="center_vertical"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:text="가나다라"/>

        <ExpandableListView
            android:id="@+id/drawer_expandableListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider ="@null"
            android:childDivider="@null"
            android:groupIndicator="@null"/>


    </LinearLayout>


</androidx.drawerlayout.widget.DrawerLayout>